# bog

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
bog_types/: Cargo.toml
bog_types/src/: inclination.rs  lib.rs
crates/bog-core/: Cargo.toml
crates/bog-core/src/: color.rs  event.rs  input.rs  key.rs  lib.rs  nohash_map.rs  rect.rs  type_map.rs  unit_map.rs
crates/bog-core/src/primitives/: mod.rs  xy.rs
crates/bog-event/: Cargo.toml
crates/bog-event/src/: key.rs  lib.rs
crates/bog-render/: Cargo.toml
crates/bog-render/src/: buffer.rs  image.rs  layer.rs  lib.rs  primitive.rs  quad.rs  text.rs  types.rs  viewport.rs
crates/bog-render/src/shaders/: image.wgsl
crates/bog-view/: Cargo.toml
crates/bog-view/src/: builtin.rs  layout.rs  lib.rs  style.rs  tree.rs
crates/bog-window/: Cargo.toml
crates/bog-window/src/: lib.rs  x11.rs
crates/bog_alloc/: Cargo.toml
crates/bog_alloc/src/: lib.rs
crates/bog_app/: Cargo.toml
crates/bog_app/src/: lib.rs  ui.rs
crates/bog_collections/: Cargo.toml
crates/bog_collections/src/: lib.rs  nohash_map.rs  unit_map.rs
crates/bog_color/: Cargo.toml
crates/bog_color/src/: lib.rs
crates/bog_env/: Cargo.toml
crates/bog_env/src/: lib.rs
crates/bog_event/: Cargo.toml
crates/bog_event/src/: key.rs  lib.rs
crates/bog_input/: Cargo.toml
crates/bog_input/src/: lib.rs
crates/bog_layout/: Cargo.toml
crates/bog_layout/src/: layout.rs  lib.rs  map.rs  placement.rs  tree.rs
crates/bog_math/: Cargo.toml
crates/bog_math/src/: lib.rs  rect.rs
crates/bog_render/: Cargo.toml
crates/bog_render/src/: buffer.rs  image.rs  layer.rs  lib.rs  primitive.rs  quad.rs  text.rs  types.rs  viewport.rs
crates/bog_render/src/shaders/: quad.wgsl
crates/bog_style/: Cargo.toml
crates/bog_style/src/: border_radius.rs  lib.rs  map.rs  tree.rs
crates/bog_types/: Cargo.toml
crates/bog_types/src/: lib.rs  sizing.rs
crates/bog_view/: Cargo.toml
crates/bog_view/src/: builtin.rs  elements.rs  lib.rs  style.rs
crates/bog_view/src/elements/: button.rs  label.rs  panel.rs  paragraph.rs  scrollable.rs
crates/bog_window/: Cargo.toml
crates/bog_window/src/: lib.rs  x11.rs
demo/: Cargo.toml
demo/src/: main.rs
docs/: ARCHITECTURE.md  GLOSSARY.md  PLATFORMS.md  REFERENCE.md  view_guide.md
env/: Cargo.toml
env/src/: lib.rs
examples/: loop_style.rs  quad_game.rs  quick_start.rs  quickstart.rs  source_viewer.rs
examples/quad_game/: main.rs  process.rs  state.rs
lib/window/: Cargo.toml
lib/window/src/: lib.rs
showcase/: Cargo.toml
showcase/src/: main.rs
src/: app.rs  color.rs  easing.rs  element.rs  fonts.rs  graphics.rs  gui.rs  layout.rs  lib.rs  math.rs  program.rs  rect.rs  render.rs  simple_app.rs  ui.rs  window.rs  xy.rs  xyz.rs
src/graphics/: animation.rs  color.rs  fonts.rs  layout.rs  math.rs  mesh.rs  mesh2d.frag  mesh2d.vert  new_renderer.rs  paint.rs  painter.rs  painter.wgsl  renderer.rs  renderer.wgsl  scene.rs  ui.rs
src/graphics/shaders/: solid_vert2d.glsl  vert2d.glsl
src/layout/: ui.rs
testing/: Cargo.toml
testing/src/: main.rs  shader.wgsl
