[workspace]
members = ["crates/*", "showcase"]

[package]
name = "bog"
version = "0.1.0"
authors = ["Matthew Norman"]
edition = "2024"
description = "A standard library alternative"
readme = "README.md"
homepage = "https://github.com/rtthw/bog"
repository = "https://github.com/rtthw/bog"
license-file = "LICENSE"

[features]
default = ["app"]
app = []

[dependencies]
bog-core.workspace = true
bog-render.workspace = true
bog-window.workspace = true

pollster = "0.4"
thiserror = "2"

[workspace.dependencies]
bog-core = { path = "crates/bog-core" }
bog-render = { path = "crates/bog-render" }
bog-view = { path = "crates/bog-view" }
bog-window = { path = "crates/bog-window" }

[[example]]
name = "loop_style"

[[example]]
name = "source_viewer"

[[example]]
name = "quad_game"

[[example]]
name = "quick_start"

[dev-dependencies]
syntect = "5"
