[package]
name = "bog_render"
version = "0.1.0"
edition = "2024"

[dependencies]
bog-core.workspace = true
bog_collections.workspace = true
bog_math.workspace = true

bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
glyphon = "0.9"
guillotiere = "0.6"
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
] }
rustc-hash = "2"
wgpu = "25"
