[package]
name = "bog_style"
version = "0.1.0"
edition = "2024"

[dependencies]
bog_alloc.workspace = true
bog_color.workspace = true
bog_math.workspace = true
slotmap = "1"
taffy = { version = "0.7", default-features = false, features = [
    "block_layout",
    "flexbox",
    "grid",
    "content_size",
] }
