[package]
name = "bog_view"
version = "0.1.0"
edition = "2024"

[features]
default = ["builtin-elements"]
builtin-elements = []

[dependencies]
bog_collections.workspace = true
bog_color.workspace = true
bog_event.workspace = true
bog_layout.workspace = true
bog_math.workspace = true
bog_render.workspace = true
bog_style.workspace = true
bog_types.workspace = true
bog_window.workspace = true
